ändrar button till a-element

--- a/src/index.html
+++ b/src/index.html
@@ -26,12 +26,12 @@
     </header>
     <div class="container">
         <main>
-            <h2>Senaste inläggen</h2>
-            <div class="btn-row">
-                <button type="submit" class="btn">Logga in</button>
-                <p>Redan inloggad?</p>
-                <button type="submit" class="btn">Skriv inlägg här</button>
+            <h2>Välkommen</h2>
+            <div class="link-row">
+                <a href="login.html" class="link-btn" id="login-btn">Logga in</a>
+                <a href="addpost.html" class="link-btn">Skriv inlägg här</a>
             </div>
+            <h2>Våra användares inlägg</h2>
             <div id="posts"></div>
 
         </main>
