--- a/src/addpost.html
+++ b/src/addpost.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/main.scss">
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <script src="js/checkAuth.js"></script>
+    <script src="js/userInfo.js"></script>
     <script src="js/addpost.js" defer></script>
     <script src="js/main.js" defer></script>
     <title>Registrera konto</title>
@@ -28,8 +29,10 @@
     </header>
     <div class="container">
         <main>
-            <h2>Skriv inlägg</h2>
+            <h2 id="welcome-msg">Välkommen</h2>
+            <div id="user-info"></div>
             <div class="form-container">
+                <h3>Skriv inlägg</h3>
                 <p id="error-msg"></p>
                 <form id="add-post" method="post">
                     <label for="title">Titel</label>
