ändrar titel i head för att stämma överens med sidans innehåll

--- a/src/addpost.html
+++ b/src/addpost.html
@@ -10,7 +10,7 @@
     <script src="js/userInfo.js"></script>
     <script src="js/addpost.js" defer></script>
     <script src="js/main.js" defer></script>
-    <title>Registrera konto</title>
+    <title>Skapa inlägg</title>
 </head>
 
 <body>
